[package]
name = "kiss_dc"
version = "0.0.6"
authors = ["Konrad Podstawski"]
edition = "2018"
description = "A tool for simple communication with a computing server using the KISS rule."
repository = "https://github.com/FiveDomain/kiss_dc"
homepage = "https://github.com/FiveDomain/kiss_dc"
license = "Beerware"

[dependencies]
tungstenite = "0.11.1"
